<resources>
    <string name="app_name">WowChat</string>
    <string name="welcome_text">Welcome to WowChat</string>
    <string name="alreadyaccount">Already Have Account</string>
    <string name="RegisterAccount">Register Account</string>
    <string name="CreateAct">Create a New Account</string>
    <string name="Login">Login</string>
    <string name="username">User Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="DisplayName">Display Name</string>
    <string name="nickname">Nick Name</string>
    <string name="Status">Status...</string>
    <string name="ChangePicture">Change Picture</string>
    <string name="ChangeStatus">Change Status</string>
    <string name="sendmessage">Send Message</string>
    <string name="editText">Chat Messages</string>
    <string name="textdescription">Last Chat Lines</string>
    <string name="displayname">Display Name</string>
    <string name="forgotPasswordText"><u>Forgot Password?</u></string>
    <string name="loginText">Login</string>

</resources>
