<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:elevation="10dp"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lastLinesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/userImageView"
                android:contentDescription="@string/textdescription"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                tools:text="@string/editText" />

            <ImageView
                android:id="@+id/userImageView"
                android:layout_width="45dp"
                android:src="@drawable/profile_img"
                android:layout_height="45dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/userDisplayNameTV"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/userImageView"
                android:text="@string/displayname" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>