<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_anchorGravity="center"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.CreateAccountActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:background="@color/colorAccent"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        app:cardCornerRadius="13dp"
        app:cardUseCompatPadding="true"
        android:elevation="4dp"
        android:layout_height="300dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:layout_height="match_parent">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView"
            android:src="@drawable/chat_icon"
            android:layout_gravity="center_horizontal">
        </ImageView>
            <TextView
                android:id="@+id/textView"
                android:layout_width="239dp"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:text="@string/welcome_text"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">
            </TextView>

            <Button
                android:id="@+id/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_width="259dp"
                android:layout_height="46dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:background="@drawable/bt_shape"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/Login"
                android:textColor="@color/grey_100"
                app:layout_constraintTop_toBottomOf="@+id/textView">

            </Button>

            <Button
                android:id="@+id/createActButon"
                android:layout_width="258dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:background="@drawable/bt_shape"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:textColor="@color/grey_100"
                android:text="@string/CreateAct"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton">
    </Button>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
